# legislative-research-tool

./: .env.example  .gitignore  AI_Legislative_Research_Tool_Roadmap.md  CLAUDE.md  alembic.ini  compound-engineering.local.md  docker-compose.yml  pyproject.toml
autoresearch/: prepare.py  program.md  promote.py  requirements.txt  train.py
docs/: demo-walkthrough.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
lab/: README.md  __init__.py  ablation.py  batch.py  generate.py  graders.py  harness.py  manifest.py  precompute.py  run.py  scoring.py  solvers.py  templates.py  trace.py
legal_lm/: __init__.py  program.md  teacher_loop.py
migrations/: env.py
scripts/: backfill_bill_text.py  backfill_historical.py  codex_bridge_probe.py  seed_demo.py
src/: cli.py  config.py  database.py
tests/: conftest.py
todos/: 001-complete-p1-no-authentication-on-api.md  003-complete-p1-no-rate-limiting.md  005-complete-p1-fstring-sql-in-vector-search.md  007-complete-p1-broken-di-wiring-analysis.md  008-complete-p2-missing-service-layer.md  008-pending-p2-missing-service-layer.md  009-complete-p2-schemas-in-endpoint-files.md  009-pending-p2-schemas-in-endpoint-files.md  010-complete-p2-missing-db-indexes.md  010-pending-p2-missing-db-indexes.md  011-complete-p2-unbounded-bm25-index.md  011-pending-p2-unbounded-bm25-index.md  012-pending-p2-pagination-total-count-wrong.md  013-complete-p2-meta-response-never-populated.md  013-pending-p2-meta-response-never-populated.md  014-pending-p2-missing-api-endpoints.md  016-pending-p3-dead-unused-code.md  (+150 more)
(+524 files in other folders)
