[project]
name = "legislative-research-tool"
version = "0.1.0"
description = "AI-native legislative research and analysis platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "anthropic>=0.43.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "defusedxml>=0.7.0",
    "click>=8.1.0",
    "bm25s>=0.2.0",
    "apscheduler>=3.10.0",
    "slowapi>=0.1.9",
    "cachetools>=5.5.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "deepeval>=1.5.0",
    "ruff>=0.8.0",
]

[project.scripts]
legis = "src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/models/*.py" = ["F821"]  # SQLAlchemy uses string forward references for relationships
